--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,131 @@
+anyio==4.7.0
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astroid==3.3.6
+asttokens==3.0.0
+async-lru==2.0.4
+attrs==24.2.0
+autopep8==2.0.4
+babel==2.16.0
+beautifulsoup4==4.12.3
+bleach==6.2.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
+comm==0.2.2
+debugpy==1.8.9
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.9
+docstring-to-markdown==0.15
+executing==2.1.0
+fastjsonschema==2.21.1
 filelock==3.16.1
+flake8==7.1.1
+fqdn==1.5.1
 fsspec==2024.10.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.26.5
 idna==3.10
+ipykernel==6.29.5
+ipython==8.30.0
+isoduration==20.11.0
+isort==5.13.2
+jedi==0.19.2
 Jinja2==3.1.4
+json5==0.10.0
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.3.3
+jupyterlab-lsp==5.1.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
 MarkupSafe==3.0.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mistune==3.0.2
 mpmath==1.3.0
+nbclient==0.10.1
+nbconvert==7.16.4
+nbformat==5.10.4
+nbqa==1.9.1
+nest-asyncio==1.6.0
 networkx==3.4.2
+notebook_shim==0.2.4
 numpy==2.2.0
+overrides==7.7.0
 packaging==24.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
 pillow==11.0.0
+platformdirs==4.3.6
+pluggy==1.5.0
+prometheus_client==0.21.1
+prompt_toolkit==3.0.48
+psutil==6.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pycodestyle==2.12.1
+pycparser==2.22
+pydocstyle==6.3.0
+pyflakes==3.2.0
+Pygments==2.18.0
+pylint==3.3.2
+python-dateutil==2.9.0.post0
+python-json-logger==3.2.0
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.12.0
+pytoolconfig==1.3.1
 PyYAML==6.0.2
+pyzmq==26.2.0
+referencing==0.35.1
 regex==2024.11.6
 requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rope==1.13.0
+rpds-py==0.22.3
+ruff==0.8.3
 safetensors==0.4.5
+Send2Trash==1.8.3
+six==1.17.0
+sniffio==1.3.1
+snowballstemmer==2.2.0
+soupsieve==2.6
+stack-data==0.6.3
 sympy==1.13.1
+terminado==0.18.1
+tinycss2==1.4.0
+tokenize_rt==6.1.0
 tokenizers==0.21.0
+tomli==2.2.1
+tomlkit==0.13.2
 torch==2.5.1
 torchvision==0.20.1
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
 transformers==4.47.0
+types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
+ujson==5.10.0
+uri-template==1.3.0
 urllib3==2.2.3
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+whatthepatch==1.0.7
+yapf==0.43.0
